--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proton-quark-configurations",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.0.0",
-    "proton-hook": "^1.0.0",
+    "proton-quark": "^1.0.0",
     "require-all": "^2.0.0"
   }
 }
