--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "proton-quark-configurations",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec ./test/*.js",
+    "start": "node index.js"
   },
   "author": "Nucleos",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.0.0",
-    "proton-quark": "^1.0.0",
-    "require-all": "^2.0.0"
+    "proton-quark": "^2.0.0",
+    "require-all": "^2.0.0",
+    "chai": "^3.5.0",
+    "lodash": "^4.0.0",
+    "mocha": "^3.2.0"
   }
 }
